--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,7 +17,7 @@
     </ul>
   </div>
   <div class="container">
-    <router-outlet></router-outlet>
+    <router-outlet style="height: 100px"></router-outlet>
   </div>
 </body>
 </html>
