--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,17 +7,40 @@
 
 </head>
 <body>
-  
-  <div [hidden]="!authenticated()" class="container">
-    <h3>{{title}}</h3>  
-    <ul class="nav nav-pills">
-      <li><a routerLinkActive="active" routerLink="/user">User Info</a></li>
-      <li><a routerLinkActive="active" routerLink="/tokens">Tokens</a></li>
-      <li><a (click)="logout()" routerLinkActive="active" routerLink="/login">Logout</a></li>
-    </ul>
-  </div>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <span class="navbar-brand ms-3">Portfolio Tracker</span>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <ng-template [ngIf]="!authenticated()" [ngIfElse]="logged">
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav ms-auto ">
+        <li class="nav-item">
+          <a class="nav-link" routerLinkActive="active" routerLink="/login">Login</a>
+        </li>
+      </ul>
+    </div>
+    </ng-template>
+    <ng-template #logged>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" routerLinkActive="active" routerLink="/tokens">Tokens</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" routerLinkActive="active" routerLink="/user">User</a>
+          </li>
+        </ul>
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="" (click)="logout()">Logout</a>
+          </li>
+        </ul>
+      </div>
+    </ng-template>
+  </nav>
   <div class="container">
-    <router-outlet style="height: 100px"></router-outlet>
+    <router-outlet></router-outlet>
   </div>
 </body>
 </html>
