--- a/src/app/transaction/add-transaction-dialog.html
+++ b/src/app/transaction/add-transaction-dialog.html
@@ -1,7 +1,15 @@
 <h2 mat-dialog-title>Add transaction</h2>
-<mat-dialog-content><h2>
-Test
-</h2></mat-dialog-content>
+<mat-dialog-content>
+    <mat-form-field appearance="fill">
+        <mat-label>Choose token:</mat-label>
+        <mat-select ngModel (ngModelChange)="changeName($event)">
+            <mat-option *ngFor="let name of tokenNames" [value]="name">
+                {{name}}
+              </mat-option>
+        </mat-select>
+        <mat-hint [hidden]="!price">{{price}}$</mat-hint>
+    </mat-form-field>
+</mat-dialog-content>
 <mat-dialog-actions>
     <button mat-button mat-dialog-close>Cancel</button>
     <button mat-button (click)="save()">Save</button>
