--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,10 +25,10 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link" routerLinkActive="active" routerLink="/tokens">Tokens</a>
+            <a class="nav-link" routerLinkActive="active" routerLink="/user">User</a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" routerLinkActive="active" routerLink="/user">User</a>
+            <a class="nav-link" routerLinkActive="active" routerLink="/transactions">Transactions</a>
           </li>
         </ul>
         <ul class="navbar-nav ms-auto">
