--- a/src/app/transaction/add-transaction-dialog.html
+++ b/src/app/transaction/add-transaction-dialog.html
@@ -1,5 +1,5 @@
 <h2 mat-dialog-title>Add transaction</h2>
-<mat-dialog-content>
+<mat-dialog-content class="d-flex flex-column">
     <mat-form-field appearance="fill">
         <mat-label>Choose token:</mat-label>
         <mat-select ngModel (ngModelChange)="changeName($event)">
@@ -9,6 +9,10 @@
         </mat-select>
         <mat-hint [hidden]="!price">{{price}}$</mat-hint>
     </mat-form-field>
+    <mat-slider min = "0" [max] = "walletBalance" [step]="step" showTickMarks discrete="true">
+        <input matSliderThumb>
+    </mat-slider>
+    
 </mat-dialog-content>
 <mat-dialog-actions>
     <button mat-button mat-dialog-close>Cancel</button>
