--- a/src/app/transaction/add-transaction-dialog.html
+++ b/src/app/transaction/add-transaction-dialog.html
@@ -2,7 +2,7 @@
 <mat-dialog-content class="d-flex flex-column justify-content-center">
     <mat-form-field appearance="fill">
         <mat-label>Choose token:</mat-label>
-        <mat-select ngModel (ngModelChange)="changeName($event)">
+        <mat-select [(ngModel)]="selectedName" (ngModelChange)="changeName($event)">
             <mat-option *ngFor="let name of tokenNames" [value]="name">
                 {{name}}
               </mat-option>
@@ -17,5 +17,5 @@
 </mat-dialog-content>
 <mat-dialog-actions>
     <button mat-button mat-dialog-close>Cancel</button>
-    <button mat-button (click)="save()">Save</button>
+    <button mat-button (click)="save(walletId!, selectedName!, amount)">Save</button>
 </mat-dialog-actions>
