--- a/src/app/transaction/transaction.component.html
+++ b/src/app/transaction/transaction.component.html
@@ -1,2 +1,14 @@
 <p>transaction works!</p>
 <button mat-raised-button (click)="openDialog()">Add transaction</button>
+<table mat-table [dataSource]="transactions">
+    <ng-container *ngFor="let column of tableColumns" [matColumnDef]="column.columnDef">
+        <th mat-header-cell *matHeaderCellDef>
+            {{column.header}}
+        </th>
+        <td mat-cell *matCellDef = "let row">
+            {{column.cell(row)}}
+        </td>
+    </ng-container>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+</table>
