--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -39,7 +39,7 @@
       </div>
     </ng-template>
   </nav>
-  <div class="container">
+  <div class="container w-75 p-3 justify-content-center">
     <router-outlet></router-outlet>
   </div>
 </body>
