feat: add expandable section to confirm closing the position

--- a/src/app/transaction/transaction-details/transaction-details.component.css
+++ b/src/app/transaction/transaction-details/transaction-details.component.css
@@ -1,6 +1,6 @@
 mat-card {
     width: 100%;
-    height: 100%;
+    margin-top: 46px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -12,6 +12,16 @@ mat-card-header{
 }
 mat-card-header img{
     margin: 0;
+}
+
+mat-card-footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+mat-card-footer div {
+    margin: 5px;
 }
 
 .flex-column {
