feat: create resusable mat table component - use created compontent inside transaction-tracker component - create pipe to filter transaction by type - use pipe to display only active transactions - add another table to show completed transactions

--- a/src/app/modules/transaction-tracker/transaction-details/transaction-details.component.html
+++ b/src/app/modules/transaction-tracker/transaction-details/transaction-details.component.html
@@ -19,7 +19,7 @@
         <p>Are you sure?</p>
         <div>
             <button mat-button (click)="collapsed = true">No</button>
-            <button mat-button>Yes</button>
+            <button mat-button (click)="completeTransaction()">Yes</button>
         </div>
         
     </mat-card-footer>
