--- a/src/app/modules/transaction-tracker/transaction-tracker.component.html
+++ b/src/app/modules/transaction-tracker/transaction-tracker.component.html
@@ -4,25 +4,12 @@
             <span id="active-p">Currently active trades</span>
             <button class="add-btn" mat-raised-button (click)="openDialog()">Add transaction</button>
         </div>
-        <table mat-table [dataSource]="transactions" class="mat-elevation-z8">
-            <ng-container *ngFor="let column of tableColumns" [matColumnDef]="column.columnDef">
-                <th mat-header-cell *matHeaderCellDef>
-                    {{column.header}}
-                </th>
-                <td mat-cell *matCellDef = "let row">
-                    {{column.cell(row)}}
-                </td>
-            </ng-container>
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns"
-                class="single-row" (click) = "clickedElement = row" ></tr>
-        </table>
-        
+        <app-table [data] = transactions [tableColumns]="tableColumnsActive" (clicked)="onClickedTransaction($event)"></app-table>
+        <app-table [data] = transactionsCompleted [tableColumns]="tableColumnsCompleted" (clicked)="onClickedTransaction($event)"></app-table>
+
     </div>
     
     <div class="container-right">
         <app-transaction-details [clickedElement] = clickedElement></app-transaction-details>
     </div>
-
-
 </div>
